# medici

./: .gitignore  README.md
examples/: Phone.medici  mobile_phone.constraints  mobile_phone.model
medici/: .cproject  .gitignore  .project  CMakeLists.txt  meson.build
medici/examples/: GPLTiny.ctw  GPLTiny.ctw.out.stats  MgplAheadModel.ctw  MgplAheadModel.ctw.out.stats  apache.medici.out.stats  bbs.medici.out.stats
medici/src/: MDDList.cpp  Operations.cpp  Settings.cpp  Tuple.cpp  TupleList.cpp  logger.cpp  main.cpp  medici.cpp  meson.build
medici/src/include/: ConstraintsParser.h  MDDList.h  MEDICI.h  Operations.h  Settings.h  Tuple.h  TupleList.h  header.h  logger.hpp
